<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_tabs_diagonal"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dial_frag_cidade_new_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                style="@style/CardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dial_frag_cidade_new_estado"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spEstado"
                style="@style/CardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                style="@style/CardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dial_frag_cidade_new_cidade"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.kpbird.chipsedittextlibrary.ChipsMultiAutoCompleteTextview
                android:id="@+id/chipsCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp" >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/checkmark"
                android:background="@drawable/button_green"
        		style="@style/ButtonTextSmallWide"
                android:text="@string/action_save" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>