<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_action_expand_black"
            android:text="@string/frag_settings_info_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtAtualizarCidades"
                    style="@style/ButtonTextSmallWide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_blue"
                    android:drawableRight="@drawable/ic_action_refresh"
                    android:inputType="none" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtNovaCidade"
                    style="@style/ButtonTextSmallWide"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_green"
                    android:drawablePadding="5dp"
                    android:layout_gravity="right"
                    
                    android:drawableRight="@drawable/ic_plus"
                    android:inputType="none"
                    android:text="@string/frag_settings_nova_cidade" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txtInfoCidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:inputType="none"
            android:text="@string/frag_settings_info_busca"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/listaCidades"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4" >
        </ListView>
    </LinearLayout>

</LinearLayout>